--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="index.css" />
-    <title>Spotify</title>
+    <title>Podify</title>
   </head>
   <body class="container full-height-grow">
     <header class="main-header">
       <a href="/" class="brand-logo">
         <img src="images/logo.png" alt="alternate" />
-        <div class="brand-logo=name">Spotify</div>
+        <div class="brand-logo=name">Podify</div>
       </a>
       <nav class="main-nav">
         <ul>
