button changed to Hire Me

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul>
           <li><a href="discover.html">Discover</a></li>
           <li><a href="join.html">Join</a></li>
-          <li><a href="#">My Details</a></li>
+          <li><a href="#">Hire Me</a></li>
         </ul>
       </nav>
     </header>
